stack build: add ability to pass version
We want to be able to override just the version, without having to know
the whole image name.

Signed-off-by: suskin <813571+suskin@users.noreply.github.com>

--- a/stack.env
+++ b/stack.env
@@ -1,5 +1,8 @@
+# This is intended to be included from inside a Makefile
+
+STACK_VERSION ?= latest
 # Image URL to use all building/pushing image targets
-STACK_IMG ?= crossplane/sample-stack-wordpress:latest
+STACK_IMG ?= crossplane/sample-stack-wordpress:$(STACK_VERSION)
 IMG=$(STACK_IMG)
 
 CRD_DIR=config/crd/bases
